--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="startRecording" class="btn">Start Recording</button>
         <button id="stopRecording" class="btn" disabled>Stop Recording</button>
       </div>
-      <video id="recordedVideo" controls></video>
+      <video id="recordedVideo"></video>
       <div id="downloadLink"></div>
     </div>
     <script src="script.js"></script>
