added audio recording

--- a/index.html
+++ b/index.html
@@ -360,6 +360,18 @@
       .settings-toggle.open i {
         transform: rotate(180deg);
       }
+
+      .toggle-controls {
+        display: flex;
+        gap: 20px;
+        margin: 15px 0;
+      }
+
+      .toggle-item {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
     </style>
     <link
       rel="stylesheet"
@@ -388,10 +400,19 @@
       <div class="status-text">
         <span class="status-indicator" id="screenStatus"></span> Screen
         <span class="status-indicator" id="cameraStatus"></span> Camera
+        <span class="status-indicator" id="audioStatus"></span> Audio
       </div>
 
-      <input type="checkbox" id="cameraToggle" name="cameraToggle" />
-      <label for="cameraToggle">Enable Camera</label>
+      <div class="toggle-controls">
+        <div class="toggle-item">
+          <input type="checkbox" id="cameraToggle" name="cameraToggle" />
+          <label for="cameraToggle">Enable Camera</label>
+        </div>
+        <div class="toggle-item">
+          <input type="checkbox" id="audioToggle" name="audioToggle" />
+          <label for="audioToggle">Enable Microphone</label>
+        </div>
+      </div>
 
       <button class="settings-toggle" id="settingsToggle">
         <i class="fas fa-cog"></i> Camera Bubble Settings
@@ -552,6 +573,8 @@
       const settingsPanel = document.getElementById("settingsPanel");
       const sizeSlider = document.getElementById("sizeSlider");
       const sizeValue = document.getElementById("sizeValue");
+      const audioToggle = document.getElementById("audioToggle");
+      const audioStatus = document.getElementById("audioStatus");
 
       // State variables
       let screenStream = null;
@@ -568,6 +591,7 @@
       let selectedFps = 30;
       let offscreenCanvas = null;
       let offscreenCtx = null;
+      let audioStream = null;
 
       async function cameraSelection() {
         try {
@@ -623,6 +647,25 @@
           });
         } catch (error) {
           showMessage(`Error accessing screen: ${error.message}`, "error");
+        }
+      }
+
+      async function audioSelection() {
+        try {
+          audioStream = await navigator.mediaDevices.getUserMedia({
+            audio: {
+              echoCancellation: true,
+              noiseSuppression: true,
+              sampleRate: 44100,
+            },
+            video: false,
+          });
+
+          showMessage("Microphone enabled!");
+          audioStatus.classList.add("active");
+        } catch (error) {
+          showMessage(`Error accessing microphone: ${error.message}`, "error");
+          audioToggle.checked = false;
         }
       }
 
@@ -805,6 +848,9 @@
         if (!cameraStream) {
           await cameraSelection();
         }
+        if (!audioStream) {
+          await audioSelection();
+        }
         startRecording();
         startRecordingButton.innerHTML = "Stop Recording";
       });
@@ -815,6 +861,17 @@
         } else {
           cameraStream.getTracks().forEach((track) => track.stop());
           cameraStream = null;
+          cameraStatus.classList.remove("active");
+        }
+      });
+
+      audioToggle.addEventListener("click", async () => {
+        if (audioToggle.checked && !audioStream) {
+          await audioSelection();
+        } else if (audioStream) {
+          audioStream.getTracks().forEach((track) => track.stop());
+          audioStream = null;
+          audioStatus.classList.remove("active");
         }
       });
 
@@ -858,10 +915,39 @@
         // Create a stream from the canvas with the selected frame rate
         const canvasStream = offscreenCanvas.captureStream(selectedFps);
 
-        // Add audio from screen capture if available
-        const audioTracks = screenStream.getAudioTracks();
+        // Combine all audio tracks
+        const audioTracks = [];
+
+        // Add screen audio if available
+        const screenAudioTracks = screenStream.getAudioTracks();
+        if (screenAudioTracks.length > 0) {
+          audioTracks.push(screenAudioTracks[0]);
+        }
+
+        // Add microphone audio if enabled
+        if (audioStream && audioStream.active) {
+          const microphoneTrack = audioStream.getAudioTracks()[0];
+          if (microphoneTrack) {
+            audioTracks.push(microphoneTrack);
+          }
+        }
+
+        // If we have audio tracks, create a mixed audio stream
         if (audioTracks.length > 0) {
-          canvasStream.addTrack(audioTracks[0]);
+          const audioContext = new AudioContext();
+          const destination = audioContext.createMediaStreamDestination();
+
+          audioTracks.forEach((track) => {
+            const source = audioContext.createMediaStreamSource(
+              new MediaStream([track])
+            );
+            source.connect(destination);
+          });
+
+          // Add the mixed audio to the canvas stream
+          destination.stream.getAudioTracks().forEach((track) => {
+            canvasStream.addTrack(track);
+          });
         }
 
         // Store the composite stream
@@ -1181,6 +1267,12 @@
             screenStream.getTracks().forEach((track) => track.stop());
             screenStream = null;
           }
+
+          if (audioStream) {
+            audioStream.getTracks().forEach((track) => track.stop());
+            audioStream = null;
+            audioStatus.classList.remove("active");
+          }
         }
         startRecordingButton.innerHTML = "Start Recording";
       }
@@ -1209,6 +1301,12 @@
         if (cameraStream) {
           cameraStream.getTracks().forEach((track) => track.stop());
           cameraStream = null;
+        }
+
+        if (audioStream) {
+          audioStream.getTracks().forEach((track) => track.stop());
+          audioStream = null;
+          audioStatus.classList.remove("active");
         }
 
         if (compositeStream) {
